resize the front page first image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <meta charset="UTF-8">
         <title> My First Webpage</title>
     </head>
-    <img src="./PIC/pic2.jpg">
+    <img style="height: auto; width: 1200px;" src="./PIC/pic2.jpg">
         <body>
-            <img src="./PIC/pic.png">
-            <p>Hello, this is ok, this is just a website for me to keep notes during 
+            <img src="./PIC/pic.png"><p style="text-align: center; font-size:28px;"> Hello, this is ok, this is just a website for me to keep notes during 
                 my journey in learning HTML. <strong>YAY</strong>
             </p>
         </body>
