--- a/cssbasic.html
+++ b/cssbasic.html
@@ -118,6 +118,12 @@
         </li>
     </ul>
 
+    
+    <h3>Now,</h3>
+    <p>
+        maybe we are ready for the next chapter of CSS:
+        <a href="./css2.html"><button> I dare you to click this </button></a>
+    </p>
     <p>
         <a href="./index.html">Return to learn more <strong>HTML</strong></a>
     </p>
