box model update

--- a/css2.html
+++ b/css2.html
@@ -109,6 +109,14 @@
     </p>
 
     <h3>Examples of different display types</h3>
+    <p class="example">I am a paragraph. A short one.</p>
+        <ul class="example" id="list">
+            <li class="list">Item One</li>
+            <li class="list">Item Two</li>
+            <li class="list">Item Three</li>
+        </ul>
+    <p class="example">I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
+            
 
     <p><a href="./cssbasic.html">Go back to Basic</a></p>
     <p><a href=#top>Return to Top</a></p>
