box model update

--- a/css2.html
+++ b/css2.html
@@ -116,7 +116,28 @@
             <li class="list">Item Three</li>
         </ul>
     <p class="example">I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
-            
+    <ul>
+        <li>Paragraph is rendered as a block box by the browser. The paragraph starts on a new line and extends the entire available width.</li>
+        <li>Item one, two, and three are <em>Flex</em> items </li>
+        <li><em>span</em> elements are normally be <em>inline</em>. However, one of the elements has a class of "block" which gets set to <em>display: block</em>.</li>
+    </ul>  
+
+    <p><strong>Let's take a look at another EXAMPLE</strong></p>
+    <p>
+        I am a paragraph. Some of the
+        <span>words</span> have been wrapped in a
+        <span>span element</span>.
+    </p>     
+    <ul>
+      <li>Item One</li>
+      <li>Item Two</li>
+      <li>Item Three</li>
+    </ul>
+    <p class="inline">I am a paragraph. A short one.</p>
+    <p class="inline">I am another paragraph. Also a short one.</p>
+
+
+
 
     <p><a href="./cssbasic.html">Go back to Basic</a></p>
     <p><a href=#top>Return to Top</a></p>
