--- a/flexbox.html
+++ b/flexbox.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/flexstyles.css">
     <title>Flexbox</title>
 </head>
 <body>
-    
+    <h2 id="top">Flexbox</h2>
+    <img id="meme" src="./PIC/cssmeme.jpg">
+    <p>
+        Flexbox is a relatively new way of manipulating elements in CSS of positioning elements.
+    </p>
+
+    <h3>Flex Containers and Flex Items</h3>
+    <p>
+        Flexbox is a whole toolbox of properties to put things in there. Some properties belong on the 
+        <em>flex containers</em>, and other to the <em>flex items.</em>
+    </p>
+
+    <p>
+        A <strong>flex container</strong> is any element that has <span>display: flex</span>. And <strong>flex items
+        </strong> is any element directly inside of a flex container.
+        <img style="height: 300px ;" src="./PIC/flexbox1.png">
+    </p>
+    <p>
+        Any element can be both a flex container and a flex item, this is called 套娃 ("nesting"). Creating and nesting 
+        multiple flex containers and items is how we build complex layouts.
+    </p>
+
+    <p>
+        <button><a id="flexboxlink" href="https://www.internetingishard.com/html-and-css/flexbox/">Flexbox!!!</a></button>
+        Let's check out this website which is very informative and cute!
+    </p>
+
+
+    <h3>Growing and Shrinking</h3>
+
+    <p><a href="./css2.html">CSS2</a></p>
+    <p><a href="./cssbasic.html">Go back to Basic</a></p>
+    <p><a href="./index.html">Return to learn more <strong>HTML</strong></a></p>
+    <p><a href=#top>Return to Top</a></p>
 </body>
 </html>
