--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li>link to pages on other websites on the Internet</li>
             <li>links to other pages on the same websites</li>
             <li><em>Absolute</em>vs. <em>relative</em> links</li>
-                <p>Aboslute Links are links to pages on other websites. A typical absolute link is made up
+                <p>Absolute Links are links to pages on other websites. A typical absolute link is made up
                     with 3 parts - <strong>protocol://domain/path</strong>
                 </p>
                 <p>
@@ -63,7 +63,7 @@
         <p>
             Use <strong>img</strong> to get pictures in the website. The <strong>img</strong> tag
             is self-closing, so it does NOT need a closing tag. It embeds an image into the page 
-            using a src attribute, which can work like link with both absolute and rleative paths.
+            using a src attribute, which can work like link with both absolute and relative paths.
         </p>
         <p>
             4 formats of images can be used in HTML:
